@@ -9,18 +9,18 @@ import engine.object.GameObject;
 import java.util.ArrayList;
 import java.util.List;
 
-public class WallCompass extends Perception {
+public class WallCompass extends Compass {
 
-    public WallCompass(Agent a) {
-        super(a);
+    public WallCompass(Agent a, Filter filter) {
+        super(a, filter);
     }
 
-    public static int numberOfPerceptionsValuesNormalise = 3;
+    public static int numberOfPerceptionsValuesNormalise = 5;
     private double maxDistanceVision;
 
     @Override
     public void updatePerceptionValues(GameMap map, List<Agent> agents, List<GameObject> gameObjects) {
-        Cell nearest_cell = nearestCell(map.getCells());
+        Cell nearest_cell = filter.nearestCell(my_agent,map.getCells());
 
         // Closest point to the agent
         var agentCoord = my_agent.getCoordinate();
@@ -57,107 +57,26 @@ public class WallCompass extends Perception {
     }
 
     @Override
-    public List<Double> getPerceptionsValuesNormalise() {
-        List<Double> perceptionsValuesNormalise = new ArrayList<>(getPerceptionValues().getFirst().vector());
-        perceptionsValuesNormalise.set(0, perceptionsValuesNormalise.get(0)/maxAngle);
-        if (perceptionsValuesNormalise.get(1) > maxDistanceVision)
-            perceptionsValuesNormalise.set(1, 0.0);
-        else
-            perceptionsValuesNormalise.set(1, perceptionsValuesNormalise.get(1)/maxDistanceVision);
+    public double[] getPerceptionsValuesNormalise() {
+        List<Double> perceptionsValues = getPerceptionValues().getFirst().vector();
+        double[] perceptionsValuesNormalise = new double[numberOfPerceptionsValuesNormalise];
 
-        perceptionsValuesNormalise.set(2, perceptionsValuesNormalise.get(2)/maxAngle);
+        perceptionsValuesNormalise[0] = (Math.cos(perceptionsValues.get(0)));
+        perceptionsValuesNormalise[1] = (Math.sin(perceptionsValues.get(0)));
+
+        if (perceptionsValuesNormalise[1] > maxDistanceVision)
+            perceptionsValuesNormalise[2] = 1.0;
+        else
+            perceptionsValuesNormalise[2] = perceptionsValues.get(1)/maxDistanceVision;
+
+        perceptionsValuesNormalise[3] = Math.cos(perceptionsValues.get(2));
+        perceptionsValuesNormalise[4] = Math.sin(perceptionsValues.get(2));
         return perceptionsValuesNormalise;
     }
 
     @Override
     public int getNumberOfPerceptionsValuesNormalise() {
         return numberOfPerceptionsValuesNormalise;
-    }
-
-    /**
-     * finding nearest cell of a specific team
-     * @param cells list of all cells of the map
-     * @return nearest agents from our agent
-     */
-    public Cell nearestCell(List<List<Cell>> cells) {
-        int rows = cells.size();
-        int cols = cells.getFirst().size();
-        int centerX = (int)Math.floor(my_agent.getCoordinate().x());
-        int centerY = (int)Math.floor(my_agent.getCoordinate().y());
-        int maxRadius = Math.max(rows, cols);
-
-        for (int r = 0; r < maxRadius; r++) {
-            Cell closestCell = null;
-            double closestDistance = Double.MAX_VALUE;
-
-            for (int i = -r; i <= r; i++) {
-                int x, y;
-
-                // Top row
-                x = centerX - r;
-                y = centerY + i;
-                if (isValid(x, y, rows, cols)) {
-                    Cell cell = cells.get(x).get(y);
-                    if(!cell.isWalkable()) {
-                        double dist = cell.getCoordinate().add(0.5).distance(getMy_agent().getCoordinate());
-                        if (dist < closestDistance) {
-                            closestCell = cell;
-                            closestDistance = dist;
-                        }
-                    }
-                }
-
-                // Bottom row
-                x = centerX + r;
-                y = centerY + i;
-                if (isValid(x, y, rows, cols)) {
-                    Cell cell = cells.get(x).get(y);
-                    if(!cell.isWalkable()) {
-                        double dist = cell.getCoordinate().add(0.5).distance(getMy_agent().getCoordinate());
-                        if (dist < closestDistance) {
-                            closestCell = cell;
-                            closestDistance = dist;
-                        }
-                    }
-                }
-
-                // Left column (skip corners)
-                x = centerX + i;
-                y = centerY - r;
-                if (isValid(x, y, rows, cols) && i != -r && i != r) {
-                    Cell cell = cells.get(x).get(y);
-                    if(!cell.isWalkable()) {
-                        double dist = cell.getCoordinate().add(0.5).distance(getMy_agent().getCoordinate());
-                        if (dist < closestDistance) {
-                            closestCell = cell;
-                            closestDistance = dist;
-                        }
-                    }
-                }
-
-                // Right column (skip corners)
-                x = centerX + i;
-                y = centerY + r;
-                if (isValid(x, y, rows, cols) && i != -r && i != r) {
-                    Cell cell = cells.get(x).get(y);
-                    if(!cell.isWalkable()) {
-                        double dist = cell.getCoordinate().add(0.5).distance(getMy_agent().getCoordinate());
-                        if (dist < closestDistance) {
-                            closestCell = cell;
-                            closestDistance = dist;
-                        }
-                    }
-                }
-            }
-
-            if(closestCell != null) return closestCell;
-        }
-
-        return null;
-    }
-
-    private static boolean isValid(int x, int y, int rows, int cols) {
-        return x >= 0 && x < rows && y >= 0 && y < cols;
     }
 
     private double normalisation(double angle) {
